# finances

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  mprocs.yaml  package.json  pnpm-lock.yaml
.claude/: settings.json
apps/extractor/: .env.example  Dockerfile  main.py  package.json  pyproject.toml
apps/mcp/: .env.example  Dockerfile  package.json  pyproject.toml
apps/mcp/finances_mcp/: __init__.py  auth.py  compose.py  config.py  extractor_client.py  server.py
apps/scheduler/: .env.example  Dockerfile  main.py  package.json  pyproject.toml
apps/web/: .env.example  Dockerfile  next.config.ts  package.json
apps/web/src/app/: apple-icon.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/rules/: actions.ts  page.tsx  queries.ts
apps/web/src/app/transactions/: TransactionsView.tsx  page.tsx
apps/web/src/components/: AppNav.tsx  CategoryBreakdown.tsx  GoogleSignIn.tsx  MonthlyChart.tsx  QueryProvider.tsx  RecurringTable.tsx  RuleForm.tsx  RuleList.tsx  RulesAdmin.tsx  SavingsFlow.tsx  SavingsTracker.tsx  SignOutButton.tsx  ThemeToggle.tsx  UncategorizedPanel.tsx
apps/web/src/lib/: auth-client.ts  auth.ts  authz.ts  categories.ts  config.ts  extractor.ts
