[project]
name = "finances-mcp"
version = "0.1.0"
description = "Remote, read-only MCP server for personal finances (Google OAuth + FastMCP)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
finances-mcp = "finances_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finances_mcp"]
