[project]
name = "scheduler"
version = "0.1.0"
description = "Daily cron that triggers the extractor's /sync endpoint"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
